test_suite/ERROR_redefinition.out
ERROR_redefinition.java: 11:  Semantic Error: In class with id: `A`, redefinition of field with id: `test`
ERROR_redefinition.java: 31:  Semantic Error: In class with id: `C`, redefinition of method with id: `test`. Note that you can override but not overload a method
A.test: 0
A.a: 4
B.test: 0
B.test: 0
C.test: 0
C.dummy: 8
